k8s/prod/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-deployment
  labels:
    deployment: celery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-deployment
  template:
    metadata:
      labels:
        app: celery-deployment
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: celery
          image: <IMAGE> # landonr/scanerr-server:25a7e15 # 
          imagePullPolicy: Always
          command: ["celery", "-A", "scanerr", "worker", "--beat", "--scheduler", "django", "--loglevel=info"]
          resources:
            limits:
              cpu: "2"
              memory: "4Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
