k8s/prod/celery-on-demand-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-on-demand-deployment
  labels:
    deployment: celery-on-demand
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: celery-on-demand-deployment
  template:
    metadata:
      labels:
        app: celery-on-demand-deployment
    spec:
      terminationGracePeriodSeconds: 300
      imagePullSecrets:
        - name: regcred
      containers:
        - name: celery-on-demand
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          command: ["/entrypoint.sh", "celery", "on_demand"]
          resources:
            limits:
              cpu: "1"
              memory: "2.5Gi"
            requests:
              cpu: "0.75"
              memory: "1.5Gi"
          lifecycle:
            preStop:
              exec:
                command: ["python3", "manage.py", "terminate_worker"]
          livenessProbe:
            exec:
              command: ["/healthcheck.sh", "celery"]
            initialDelaySeconds: 120
            periodSeconds: 60
            failureThreshold: 12
          readinessProbe:
            exec:
              command: ["/healthcheck.sh", "celery"]
            initialDelaySeconds: 120
            periodSeconds: 60
            failureThreshold: 12
