k8s/prod/celery-scheduled-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-scheduled-deployment
  labels:
    deployment: celery
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: celery-scheduled-deployment
  template:
    metadata:
      labels:
        app: celery-scheduled-deployment
    spec:
      terminationGracePeriodSeconds: 300
      imagePullSecrets:
        - name: regcred
      containers:
        - name: celery
          image: <IMAGE> # cursiondev/server:65ccd89 #
          imagePullPolicy: IfNotPresent
          command: ["/entrypoint.sh", "celery", "scheduled"]
          resources:   # -> small node pool (2vcpu & 4Gi)
            limits:
              cpu: "1"
              memory: "2.5Gi"
            requests:
              cpu: "0.75"
              memory: "1.5Gi"
          lifecycle:
            preStop:
              exec:
                command: ["python3", "manage.py", "terminate_worker"]
          livenessProbe:
            exec:
              command: ["/healthcheck.sh", "celery"]
            initialDelaySeconds: 120
            periodSeconds: 60
            failureThreshold: 12
          readinessProbe:
            exec:
              command: ["/healthcheck.sh", "celery"]
            initialDelaySeconds: 120
            periodSeconds: 60
            failureThreshold: 12
