k8s/prod/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rabbitmq
  template:
    metadata:
      labels:
        name: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:alpine
          ports:
          - containerPort: 5672
          resources: 
            limits:
              cpu: "250m"
              memory: "250Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
  - port: 5672
  selector:
    name: rabbitmq
