k8s/prod/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ## ensure below section is commented out on first creation ##
    # cert-manager.io/cluster-issuer: letsencrypt-nginx     
spec:
  ## ensure below section is comented out on first creation ##
  # tls:
  #   - hosts:
  #     - api.scanerr.io
  #     secretName: letsencrypt-nginx
  rules:
  - host: api.scanerr.io
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 80
        path: /
        pathType: Prefix
  ingressClassName: nginx
